--- a/components/protocol-section.scss
+++ b/components/protocol-section.scss
@@ -4,7 +4,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 30px 80px;
+
+  @media (max-width: 575px) {
+    padding: 30px 45px;
+  }
 
   .icon {
     width: 50px;
@@ -21,7 +25,7 @@
 
   .title {
     font-family: "Ms Madi", cursive;
-    font-size: 3rem;
+    font-size: 1.5rem;
     font-weight: bold;
   }
 }
