update image with fix image

--- a/components/header.scss
+++ b/components/header.scss
@@ -94,7 +94,7 @@
   content: "";
   width: 100%;
   min-height: 100vh;
-  background: rgb(97 182 224 / 0.3);
+  background: #378ead5c;
   display: block;
   position: absolute;
   top: 0;
@@ -124,7 +124,7 @@ section {
   content: "";
   width: 100%;
   min-height: 95vh;
-  background: rgb(97 182 224 / 0.3);
+  background: #378ead5c;
   display: block;
   position: absolute;
   top: 0;
