--- a/components/schedule.scss
+++ b/components/schedule.scss
@@ -194,3 +194,21 @@
     border-radius: 15px;
   }
 }
+
+.footer-bg {
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position-x: center !important;
+}
+
+.footer-bg::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: #3b576f66;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.6;
+}
