--- a/components/header.scss
+++ b/components/header.scss
@@ -40,9 +40,11 @@
   position: absolute;
   margin: auto;
   width: 100%;
+  display: flex;
   height: 100%;
-  top: 25%;
-  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   .flower-img {
     width: 300px;
