--- a/components/header.scss
+++ b/components/header.scss
@@ -18,14 +18,14 @@
 .title-section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center !important;
   align-items: center;
 
   .brides-name {
     font-size: 6.5rem !important;
     margin: 0px !important;
     @media (max-width: 700px) {
-      font-size: 3.5rem !important;
+      font-size: 2.5rem !important;
     }
   }
 }
@@ -43,8 +43,8 @@
   display: flex;
   height: 100%;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: space-around;
 
   .flower-img {
     width: 200px;
@@ -62,11 +62,11 @@
     font-family: "Water Brush", cursive;
     font-size: 4.5rem;
     font-weight: bold;
-    margin: 15px 0px;
+    margin: 0px 10px;
     color: white;
 
     @media (max-width: 390px) {
-      font-size: 3.5rem;
+      font-size: 2.5rem;
     }
   }
 
