--- a/styles/style.sass
+++ b/styles/style.sass
@@ -4,7 +4,7 @@ body
     margin: 0px
     padding: 0px
 
-$primary-color: #4eb4d3 // change antd primary-color
+$primary-color: #cc9a05 // change antd primary-color
 @import '../components/index.scss'
 @import './generate.scss'
 
