--- a/components/schedule.scss
+++ b/components/schedule.scss
@@ -89,8 +89,8 @@
 
 .countDownCard {
   border-radius: 12px !important;
-  background: cadetblue !important;
-  border: 1px solid #5f9da0 !important;
+  background: #ee6983 !important;
+  border: 1px solid #ee6983 !important;
   min-height: 129.9px !important;
   color: white !important;
   font-family: "Lora", serif;
@@ -121,6 +121,12 @@
   background-image: url(https://menica.pro/img/backgrounds/BCA.svg);
   background-repeat: no-repeat;
   background-position: right -22px bottom 10px;
+}
+
+.giftCard.mandiri {
+  background-image: url("/mandiri.svg");
+  background-repeat: no-repeat;
+  background-position: right -86px bottom -30px;
 }
 
 .giftCard.bri {
