--- a/styles/variables.less
+++ b/styles/variables.less
@@ -1,4 +1,4 @@
 @import "~antd/dist/antd.less"; // Import Ant Design styles
 @import "~antd/lib/style/themes/default.less";
-@primary-color: #cc9a05; // change antd primary-color
+@primary-color: #EE6983; // change antd primary-color
 
